Add createTopic into openapi.json
